app/(solutions)/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        --background: 0 0% 100%;
        --foreground: 224 71.4% 4.1%;
        --card: 0 0% 100%;
        --card-foreground: 224 71.4% 4.1%;
        --popover: 0 0% 100%;
        --popover-foreground: 224 71.4% 4.1%;
        --primary: 262.1 83.3% 57.8%;
        --primary-foreground: 210 20% 98%;
        --secondary: 220 14.3% 95.9%;
        --secondary-foreground: 220.9 39.3% 11%;
        --muted: 220 14.3% 95.9%;
        --muted-foreground: 220 8.9% 46.1%;
        --accent: 220 14.3% 95.9%;
        --accent-foreground: 220.9 39.3% 11%;
        --destructive: 0 84.2% 60.2%;
        --destructive-foreground: 210 20% 98%;
        --border: 220 13% 91%;
        --input: 220 13% 91%;
        --ring: 262.1 83.3% 57.8%;
        --radius: 0.5rem;
    }

    .dark {
        --background: 224 71.4% 4.1%;
        --foreground: 210 20% 98%;
        --card: 224 71.4% 4.1%;
        --card-foreground: 210 20% 98%;
        --popover: 224 71.4% 4.1%;
        --popover-foreground: 210 20% 98%;
        --primary: 263.4 70% 50.4%;
        --primary-foreground: 210 20% 98%;
        --secondary: 215 27.9% 16.9%;
        --secondary-foreground: 210 20% 98%;
        --muted: 215 27.9% 16.9%;
        --muted-foreground: 217.9 10.6% 64.9%;
        --accent: 215 27.9% 16.9%;
        --accent-foreground: 210 20% 98%;
        --destructive: 0 62.8% 30.6%;
        --destructive-foreground: 210 20% 98%;
        --border: 215 27.9% 16.9%;
        --input: 215 27.9% 16.9%;
        --ring: 263.4 70% 50.4%;
    }
}

@layer base {
    * {
        @apply border-border;
    }

    html {
        scroll-behavior: smooth !important;
    }
    body {
        @apply bg-background text-foreground;
        margin: 0;
        padding: 0;
        box-sizing: border-box;
        --keyboard-zindex: 3000;
        --keyboard-padding-top: 0px;
    }
}

p {
    margin: 1rem;
}

.katex {
    font-size: 2rem !important;
}

@media (max-width: 694px) {
    math-field {
        font-size: large !important;
    }
}

.fancy-1 {
    @apply rounded-md;
    background: radial-gradient(farthest-side at bottom, black 98%, transparent)
            bottom/calc(2 * var(--d, 7px)) var(--d, 0) no-repeat,
        linear-gradient(black 0 0) bottom / 15px 3px no-repeat;
    transition: 0.5s;
}
.fancy-1:hover {
    --d: 150%;
    color: #fff;
}

.dark .fancy-1 {
    @apply rounded-md;
    background: radial-gradient(farthest-side at bottom, white 98%, transparent)
            bottom/calc(2 * var(--d, 7px)) var(--d, 0) no-repeat,
        linear-gradient(white 0 0) bottom / 15px 3px no-repeat;
    transition: 0.5s;
}
.dark .fancy-1:hover {
    --d: 150%;
    color: #000;
}

[data-radix-popper-content-wrapper] {
    z-index: 500000000 !important;
}
.firebase-emulator-warning {
    @apply sr-only;
}

math-field {
    --contains-highlight-background-color: rgba(0, 120, 212, 0.2);
}

.go-away {
    @apply overflow-hidden;
    width: fit-content;
    /* make this element's width be 0 after 6 seconds */
    animation: go-away 1s 3s linear forwards;
}

@keyframes go-away {
    100% {
        width: 0;
        padding: 0;
        margin: 0;
    }
}

.katex {
    font-size: 1.5rem !important;
    line-height: 1.6 !important;

    display: block !important;
    overflow-x: auto !important;
    overflow-y: hidden !important;
}

